<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="287dp"
        android:layout_height="286dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25px"
            android:text="@string/str_myTrip"
            android:textAlignment="center"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Origem"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/origem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_InsertOrigem" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Destino"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_DestinoViagem" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Data"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28sp"
                android:hint="@string/hint_DataViagem" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/memorizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_Memorizar" />

        <Button
            android:id="@+id/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_Prosseguir" />

        <Button
            android:id="@+id/btnSugestao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_Sugestao" />
    </LinearLayout>
</LinearLayout>