<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViagemService">

    <ImageView
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_gravity="center"
        android:layout_marginBottom="50px"
        android:src="@drawable/pin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="366px"
            android:layout_height="wrap_content"
            android:text="@string/str_Origem"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="360px"
            android:layout_height="wrap_content"
            android:text="@string/str_Destino"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="360px"
            android:layout_height="wrap_content"
            android:text="@string/str_Data"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/origemDigitada"
            android:layout_width="360px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/destinoDigitado"
            android:layout_width="360px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/dataDigitada"
            android:layout_width="360px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:text="@string/str_viagemService"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_str_viagemService2" />

    <Button
        android:id="@+id/buttonMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_str_viagemService3" />
</LinearLayout>