<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_sugestao_viagem">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="34dp"
        android:layout_weight="1"
        android:text="@string/str_SugestaoViajem"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_trabalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_lazer"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="144dp"
        android:layout_weight="1"
        android:text="@string/str_ViagemLazer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_amigos" />

    <Button
        android:id="@+id/btn_amigos"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:layout_weight="1"
        android:text="@string/str_ViagemAmigos"
        app:layout_constraintBottom_toTopOf="@+id/btn_lazer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_trabalho" />

    <Button
        android:id="@+id/btn_trabalho"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="1"
        android:text="@string/str_ViagemTrabalho"
        app:layout_constraintBottom_toTopOf="@+id/btn_amigos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>
